# dw-bigquery-arco

./: Dockerfile.dbt  Dockerfile.extractor  README.md  backlog_load.py  dbt_runner.py  main.py  pyproject.toml  requirements.txt
config/: settings.py
dbt_arco/: .user.yml  dbt_project.yml  profiles.yml
dbt_arco/models/: sources.yml
dbt_arco/models/gold/: gold__wms_orders.sql  gold__wms_orders_30_days.sql
dbt_arco/models/silver/: silver_order_dtl.sql  silver_order_hdr.sql
extractor/: bronze_loader.py  pipeline.py  wms_client.py
