[project]
name = "dw-bigquery-arco"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo Cardoso",email = "cardosopaulohenrique91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "google-cloud-bigquery (>=3.41.0,<4.0.0)",
    "google-auth (>=2.49.2,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "tzdata (>=2026.2,<2027.0)",
    "dbt-core (>=1.11.8,<2.0.0)",
    "dbt-bigquery (>=1.11.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
